--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,7 +1,6 @@
 .footer {
   display: flex;
   max-width: 1184px;
-  max-height: 18px;
   justify-content: space-between;
   padding: 92px 0 24px;
 }
@@ -9,17 +8,18 @@
 @media screen and (max-width: 1024px) {
   .footer {
     max-width: 928px;
+    padding: 90px 48px 24px;
   }
 }
 
 @media screen and (max-width: 768px) {
   .footer {
     max-width: 720px;
-    padding: 90px 0 24px;
+    padding: 90px 24px 22px;
   }
 }
 
-@media screen and (max-width: 605px) {
+@media screen and (max-width: 655px) {
   .footer {
     max-width: 288px;
     padding: 64px 16px 24px;
