--- a/blocks/cover/__overlay/cover__overlay.css
+++ b/blocks/cover/__overlay/cover__overlay.css
@@ -1,4 +1,6 @@
 .cover__overlay {
+  background: url(../../../images/cover-trains.jpg) no-repeat 50% 50%;
+  background-size: cover;
   width: 100%;
   min-height: 740px;
   display: flex;
@@ -7,14 +9,24 @@
   align-items: center;
   text-decoration: none;
   color: #fff;
-  background-color: #2A2C2F;
-  opacity: 0.7;
-  transition: background-color .3s;
+  position: relative;
+
 }
 
-.cover__overlay:hover {
-  background: #2A2C2F;
+.cover__overlay::before {
+  background-color: #2A2C2F;
+  opacity: 0.3;
+  position: absolute;
+  content: ' ';
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.cover__overlay:hover::before {
   opacity: 0.8;
+  transition: opacity 1s linear .2s;
 }
 
 @media screen and (max-width: 1024px) {
