--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -4,18 +4,14 @@
   line-height: 1.2;
   text-align: center;
   max-width: 360px;
-  margin: 0;
+  margin: 0 16px;
+  z-index: 5;
 }
 
-  @media screen and (max-width: 361px) {
-    .cover__subtitle {
-      font-size: 14px;
-      line-height: 1.1;
+@media screen and (max-width: 361px) {
+  .cover__subtitle {
+    font-size: 14px;
+    line-height: 1.1;
+    max-width: 288px;
   }
-  }
-
-  @media screen and (max-width: 320px) {
-    .cover__subtitle {
-      max-width: 288px;
-    }
-  }
+}
