--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -1,14 +1,20 @@
 .footer__link {
   font-weight: 400;
   font-size: 16px;
-  line-height: 18px;
+  line-height: 1.1;
   color: #fff;
   text-decoration: none;
 }
 
-@media screen and (max-width: 605px) {
+@media screen and (max-width: 655px) {
   .footer__link {
     font-size: 24px;
     line-height: 1;
   }
+}
+
+
+.footer__link:hover {
+  opacity: 0.8;
+  transition: opacity 1s linear;
 }
