--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -1,6 +1,6 @@
 .lead__subtitle {
   max-width: 640px;
-  margin-bottom: 56px;
+  margin: 0 0 64px 0;
   font-weight: 400;
   font-size: 30px;
   line-height: 1.2;
@@ -15,8 +15,7 @@
 
 @media screen and (max-width: 768px) {
   .lead__subtitle {
-    margin: 0 24px 56px;
-    font-size: 20px;
+    font-size: 30px;
   }
 }
 
