--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -1,3 +1,23 @@
-/*.place__image {
-  margin: 0 -16px;
+.place__image {
+  width: 100%;
+  max-height: 460px;
+  object-fit: cover;
+}
+
+@media screen and (max-width: 1024px) {
+  .place__image {
+    max-height: 440px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .place__image {
+    max-height: 340px;
+  }
+}
+
+@media screen and (max-width: 615px) {
+  .place__image {
+    max-height: 320px;
+  }
 }
