--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -2,8 +2,7 @@
   font-weight: 400;
   font-size: 18px;
   line-height: 1.6;
-  margin: 0;
-  margin-bottom: 26px;
+  margin: 0 0 26px 0;
 }
 
 .place__paragraph:last-child {
@@ -13,21 +12,19 @@
 @media screen and (max-width: 1024px) {
   .place__paragraph {
     font-size: calc(16px + (18 - 16) * ((100vw - 320px) / (1280 - 320)));
-    line-height: 1.6;
-}
+  }
 }
 
 @media screen and (max-width: 768px) {
   .place__paragraph {
     font-size: 16px;
     margin-bottom: 25px;
+
   }
 }
 
 @media screen and (max-width: 615px) {
   .place__paragraph {
-    font-size: 16px;
-    line-height: 1.6;
     margin: 0 16px 25px;
   }
 }
