--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -1,21 +1,26 @@
-.title {
+.place__title {
   font-weight: 900;
   font-size: 72px;
   line-height: 1.06;
   margin: 0;
 }
 
+@media screen and (max-width: 1024px) {
+  .place__title {
+    font-size: 55px;
+  }
+}
+
 @media screen and (max-width: 768px) {
-  .title {
+  .place__title {
     font-size: 42px;
     line-height: 1.01;
   }
 }
 
 @media screen and (max-width: 615px) {
-  .title {
+  .place__title {
     font-size: 32px;
-    line-height: 1.01;
     margin: 0 16px;
   }
 }
