--- a/blocks/place/__url-heading/place__url-heading.css
+++ b/blocks/place/__url-heading/place__url-heading.css
@@ -3,6 +3,7 @@
   font-size: 12px;
   line-height: 1;
   letter-spacing: 0.2em;
+  text-transform: uppercase;
   color: #aaa;
   margin: 0;
   margin-bottom: 12px;
