--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -9,6 +9,7 @@
 @media screen and (max-width: 1024px) {
   .place {
     grid-template-columns: 440px 1fr;
+    column-gap: 32px;
   }
 }
 
@@ -17,12 +18,15 @@
     grid-template-columns: 340px 1fr;
     padding: 0 24px;
     box-sizing: border-box;
+    column-gap: 28px;
   }
 }
+
 
 @media screen and (max-width: 615px) {
   .place {
     grid-template-columns: 1fr;
     padding: 0;
+    row-gap: 32px;
   }
 }
