--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -8,7 +8,14 @@
   z-index: 5;
 }
 
-@media screen and (max-width: 361px) {
+@media screen and (max-width: 1024px) {
+  .cover__subtitle {
+    font-size: calc(14px + (18 - 14) * ((100vw - 320px) / (1024 - 320)));
+  }
+}
+
+
+@media screen and (max-width: 320px) {
   .cover__subtitle {
     font-size: 14px;
     line-height: 1.1;
