--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -8,7 +8,14 @@
   z-index: 5;
 }
 
-@media screen and (max-width: 615px) {
+@media screen and (max-width: 1024px) {
+  .cover__title {
+    font-size: calc(32px + (72 - 32) * ((100vw - 320px) / (1024 - 320)));
+  }
+}
+
+
+@media screen and (max-width: 320px) {
   .cover__title {
     font-size: 32px;
     margin-bottom: 16px;
