--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -15,12 +15,13 @@
 
 @media screen and (max-width: 768px) {
   .lead__subtitle {
-    font-size: 30px;
+    font-size: calc(16px + (30 - 16) * ((100vw - 320px) / (768 - 320)));
   }
 }
 
 @media screen and (max-width: 320px) {
   .lead__subtitle {
+    max-width: 288px;
     margin: 0 16px 40px;
     font-size: 16px;
     line-height: 1.25;
